--- a/news/assets/css/posts.css
+++ b/news/assets/css/posts.css
@@ -86,3 +86,8 @@ ul.meta {
     margin-right: 5px;
     font-weight: 700;
 }
+
+.button-refresh-area {
+    text-align: center;
+    margin-top: 20px;
+}
